# edgeware-node

./: .travis.yml  Cargo.toml  README.md  edgeware_runtime.wasm
.github/workflows/: edgeware_build.yml  rust.yml
chains/: testnet-0.9.3.compact.wasm
modules/edge-identity/: Cargo.toml
modules/edge-identity/src/: identity.rs  lib.rs
modules/edge-randomness-collective-flip/: Cargo.toml
modules/edge-randomness-collective-flip/src/: lib.rs
modules/edge-signaling/: Cargo.toml
modules/edge-signaling/src/: lib.rs  signaling.rs
modules/edge-treasury-reward/: Cargo.toml
modules/edge-treasury-reward/src/: lib.rs  treasury_reward.rs
modules/edge-voting/: Cargo.toml
modules/edge-voting/src/: lib.rs
node/cli/: Cargo.toml
node/cli/src/: chain_spec.rs  cli.rs  factory_impl.rs  lib.rs  service.rs
node/executor/: Cargo.toml
node/executor/src/: lib.rs
node/primitives/: Cargo.toml
node/primitives/src/: lib.rs
node/rpc/: Cargo.toml
node/rpc-client/: Cargo.toml
node/rpc/src/: lib.rs
node/runtime/: Cargo.toml  build.rs
node/runtime/src/: constants.rs  impls.rs  lib.rs
node/service/: Cargo.toml
node/service/src/: fixtures.rs  lib.rs
node/validation/: Cargo.toml
node/validation/src/: error.rs  evaluation.rs  lib.rs
scripts/: build-only-wasm.sh  init.sh
testnets/v0.9.0/: chainspec.json  genesis.json
