[workspace]
members = [
	"node/runtime",
	"node/cli",
	"node/executor",
	"node/primitives",
	"node/rpc",
	"node/rpc-client",
	"modules/edge-signaling",
	"modules/edge-identity",
	"modules/edge-voting",
	"modules/edge-treasury-reward",
]

[profile.release]
# Edgeware runtime requires unwinding.
panic = "unwind"