[package]
name = "edgeware-cli"
version = "1.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[dependencies]
log = "0.4"
tokio = "0.1.7"
futures = "0.1"
exit-future = "0.1"
jsonrpc-core = "13.1.0"
substrate-cli = { git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
parity-codec = { package = "parity-scale-codec", version = "1.0.0" }
sr-io = { git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
client = { package = "substrate-client", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
primitives = { package = "substrate-primitives", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
inherents = { package = "substrate-inherents", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
hex-literal = "0.2"
substrate-basic-authorship = { git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
substrate-service = { git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
network = { package = "substrate-network", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
aura = { package = "substrate-consensus-aura", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
aura_primitives = { package = "substrate-consensus-aura-primitives", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
grandpa_primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
sr-primitives = { git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
substrate-keystore = { git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
substrate-telemetry = { package = "substrate-telemetry", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
structopt = "0.2"
transaction-factory = { git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
keyring = { package = "substrate-keyring", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
indices = { package = "srml-indices", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
timestamp = { package = "srml-timestamp", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3", default-features = false }
rand = "0.6"
finality_tracker = { package = "srml-finality-tracker", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3", default-features = false }
contracts = { package = "srml-contracts", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
system = { package = "srml-system", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
balances = { package = "srml-balances", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }

edgeware-executor = { path = "../executor" }
edgeware-service = { path = "../service" }
edgeware-primitives = { path = "../primitives" }
edgeware-rpc = { path = "../rpc" }
edgeware-runtime = { path = "../runtime" }
[build-dependencies]
structopt = "0.2"