[package]
name = "edgeware-executor"
version = "1.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[dependencies]
trie-root = "0.14.0"
parity-codec = "4.1.1"
runtime_io = { package = "sr-io", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
state_machine = { package = "substrate-state-machine", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
substrate-executor = { git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
primitives = { package = "substrate-primitives", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
trie = { package = "substrate-trie", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }

[dev-dependencies]
test-client = { package = "substrate-test-client", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
keyring = { package = "substrate-keyring", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
runtime_support = { package = "srml-support", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
balances = { package = "srml-balances", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
session = { package = "srml-session", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
staking = { package = "srml-staking", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
system = { package = "srml-system", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
timestamp = { package = "srml-timestamp", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
treasury = { package = "srml-treasury", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
contracts = { package = "srml-contracts", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
grandpa = { package = "srml-grandpa", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
indices = { package = "srml-indices", git = "https://github.com/hicommonwealth/substrate.git", branch = "testnet-v0.9.3" }
wabt = "~0.7.4"

[features]
benchmarks = []