[package]
name = "edgeware-executor"
version = "1.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[dependencies]
substrate-executor = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
edgeware-runtime = { path = "../runtime" }

[features]
wasmtime = [
    "substrate-executor/wasmtime",
]