[package]
name = "edgeware-primitives"
version = "1.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[dependencies]
primitives = { package = "substrate-primitives", git = "https://github.com/hicommonwealth/substrate.git", branch = "develop", default-features = false }
sr-primitives = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop", default-features = false }
consensus-aura = { package = "substrate-consensus-aura-primitives", git = "https://github.com/hicommonwealth/substrate.git", branch = "develop", default_features = false }
client = { package = "substrate-client", git = "https://github.com/hicommonwealth/substrate.git", branch = "develop", default-features = false }

[dev-dependencies]
substrate-serializer = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"primitives/std",
	"sr-primitives/std",
]
