[package]
name = "edgeware-rpc-client"
version = "0.1.0"
authors = ["drewstone <drewstone329@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7.0"
futures = "0.1.29"
hyper = "0.12.35"
jsonrpc-core-client = { version = "14.0.3", features = ["http", "ws"] }
log = "0.4.8"
edgeware-primitives = { path = "../primitives" }
substrate-rpc = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop", version = "2.0.0" }
