[package]
name = "edgeware-rpc"
version = "2.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[dependencies]
client = { package = "substrate-client", git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
jsonrpc-core = "14.0.3"
edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }
sr-primitives = {git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
srml-contracts-rpc = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
srml-transaction-payment-rpc = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
srml-system-rpc = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
