[package]
name = "edgeware-validation"
version = "1.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[dependencies]
futures = "0.1.17"
parking_lot = "0.4"
tokio = "0.1.7"
error-chain = "0.12"
log = "0.3"
exit-future = "0.1"
parity-codec = "3.1"
edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }
substrate-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "v1.0" }
substrate-consensus-aura-primitives = { git = "https://github.com/paritytech/substrate", branch = "v1.0" }
substrate-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "v1.0" }
substrate-inherents = { git = "https://github.com/paritytech/substrate", branch = "v1.0" }
substrate-consensus-common = { git = "https://github.com/paritytech/substrate", branch = "v1.0" }
substrate-primitives = { git = "https://github.com/paritytech/substrate", branch = "v1.0" }
substrate-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "v1.0" }
srml-aura = { git = "https://github.com/paritytech/substrate", branch = "v1.0" }
srml-support = { git = "https://github.com/paritytech/substrate", branch = "v1.0" }
substrate-client = { git = "https://github.com/paritytech/substrate", branch = "v1.0" }
sr-primitives = { git = "https://github.com/paritytech/substrate", branch = "v1.0" }
substrate-consensus-authorities = { git = "https://github.com/paritytech/substrate", branch = "v1.0" }
