[package]
name = "edgeware-validation"
version = "1.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[dependencies]
futures = "0.1.17"
futures03 = { package = "futures-preview", version = "0.3.0-alpha.17", features = ["compat"] }
futures-timer = "0.2.1"
derive_more = "0.14.0"
error-chain = "0.12"
log = "0.3"
exit-future = "0.1"
codec = { package = "parity-scale-codec", version = "~1.0.0", default-features = false, features = ["derive"] }
edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }
substrate-consensus-aura = { git = "https://github.com/hicommonwealth/substrate", branch = "develop" }
substrate-consensus-aura-primitives = { git = "https://github.com/hicommonwealth/substrate", branch = "develop" }
substrate-finality-grandpa = { git = "https://github.com/hicommonwealth/substrate", branch = "develop" }
substrate-inherents = { git = "https://github.com/hicommonwealth/substrate", branch = "develop" }
substrate-consensus-common = { git = "https://github.com/hicommonwealth/substrate", branch = "develop" }
substrate-primitives = { git = "https://github.com/hicommonwealth/substrate", branch = "develop" }
substrate-transaction-pool = { git = "https://github.com/hicommonwealth/substrate", branch = "develop" }
srml-aura = { git = "https://github.com/hicommonwealth/substrate", branch = "develop" }
srml-support = { git = "https://github.com/hicommonwealth/substrate", branch = "develop" }
substrate-client = { git = "https://github.com/hicommonwealth/substrate", branch = "develop" }
sr-primitives = { git = "https://github.com/hicommonwealth/substrate", branch = "develop" }